@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="metadata.musicvideos.theaudiodb.com"
        name="TheAudioDb.com for Music Videos"
-       version="1.3.2"
+       version="1.3.3"
        provider-name="Team Kodi">
   <requires>
     <import addon="xbmc.metadata" version="2.1.0"/>
@@ -120,7 +120,7 @@
 			<screenshot>resources/screenshot-02.jpg</screenshot>
 			<screenshot>resources/screenshot-03.jpg</screenshot>
 	</assets>
-	<news>Updated with new artwork resources</news>
+	<news>Fixed artist apostrophes</news>
     <source>https://github.com/zag2me/metadata.musicvideos.theaudiodb.com</source>
   </extension>
 </addon>
