@@ -1,3 +1,9 @@
+[B]1.3.3[/B]
+- Fixed artist apostrophes (thx roura97311)
+
+[B]1.3.2[/B]
+- Move icon into root for backwards compatibility
+
 [B]1.3.1[/B]
 - Updated the Add-on with new artwork resources
 
